#2: Get All topic from cnpn api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Connection url for the database "demodb"
-spring.datasource.url=jdbc:mysql://127.0.0.1/emsdb
+spring.datasource.url=jdbc:mysql://127.0.0.1/valosdcn_cnpinyin_practise
 
 # Username and password
 spring.datasource.username=root
