#13: Radical uncoding bug resolved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Connection url for the database "demodb"
-spring.datasource.url=jdbc:mysql://127.0.0.1/valosdcn_cnpinyin_practise
+spring.datasource.url=jdbc:mysql://127.0.0.1/valosdcn_cnpinyin_practise??useUnicode=yes&characterEncoding=UTF-8
 
 # Username and password
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.show-sql=true
